# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Seth Kerr for Oak Development Technologies
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "odt-at42qt1070-python"
description = "A library for using the AT42QT1070 i2c touch sensor."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Oak Development Technologies", email = "hello@oakdev.tech"}
]
urls = {Homepage = "https://github.com/skerr92/at42qt-acorn-python"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "i2c,",
    "i2c_device",
    "at42qt1070"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["odt-at42qt1070-python"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
